--- a/clock.html
+++ b/clock.html
@@ -17,7 +17,7 @@
     </head>
 
     <body style="background-color:rgb(0, 0, 0);">
-       
+        <button class="button" href="index.html">HOME</button>
         <script src="lib/p5.js"></script>
       
         <script src="p5/clock_02.js" class="centerimage"></script>
