--- a/molnar.html
+++ b/molnar.html
@@ -37,7 +37,7 @@
        
 
     </body>
-
+    <button class="button" href="index.html">HOME</button>
     <script src="lib/simplex-noise.min.js" class="centerimage"></script>
     <script src="svg/molnar.js"></script>
 
