--- a/rectangles.html
+++ b/rectangles.html
@@ -14,6 +14,7 @@
     </head>
 
     <body style="background-color:rgb(0, 0, 0);">
+        <button class="button" href="index.html">HOME</button>
         <img src="drawbot/rotating_rectangles_V01.jpg" alt="rectangle" class="centerimage" width="300">
      
        
